compiler/testData/diagnostics/tests/operatorRem/errorOnExplicitModCall.kt
fun test() {
    1.<!DEPRECATION_ERROR!>mod<!>(3)
}